--- a/03_1/dz_03_blank/unit_03/unit_03.html
+++ b/03_1/dz_03_blank/unit_03/unit_03.html
@@ -77,7 +77,8 @@
           пользователю больше или равно 18 лет, и 0 если меньше.
         </p>
         <div class="form-control">
-          Input i-4 <input type="number" class="i-4" />
+          Input i-4
+          <input type="number" class="i-4" />
         </div>
         <button class="button-primary b-4">Task-4</button>
         <div class="out-4"></div>
