--- a/Test2/index.html
+++ b/Test2/index.html
@@ -4,15 +4,18 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <h1>Test2</h1>
-    <form action="" method="get">
-      <input type="text" />
-      <input type="text" />
-      <input type="text" />
+    <form name="form_1" action="" onsubmit="return validateForm()" method="get">
+      <input name="i_1" type="text" value="5" />
+      <input name="i_2" type="text" />
+      <input name="i_3" type="text" />
+      <input name="i_4" type="date" />
+      <button class="date_1">Date</button>
       <div></div>
     </form>
-    <script src="index.html"></script>
+    <script src="script.js"></script>
   </body>
 </html>
