added Hello word

--- a/14/04_homework/index.html
+++ b/14/04_homework/index.html
@@ -1,23 +1,22 @@
 <!DOCTYPE html>
 <html lang="ru">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="style.css" />
     <title>Document</title>
-</head>
+  </head>
 
-<body>
-    <div>
-        <p>Task 1. Создайте переменную a = 4. Используя конструкцию if проверьте то a == 4. Выведите сообщение в
-            консоль.</p>
-        <button class="task-1">button</button>
+  <body>
+    <div class="container city-block">
+      <div class="city city-name"></div>
+      <hr />
+      <div class="city temp"></div>
+      <hr />
+      <div class="city clouds"></div>
+      <hr />
     </div>
-    <hr>
-
     <script src="script.js"></script>
-</body>
-
+  </body>
 </html>
