added Hello word

--- a/14/04_homework/index.html
+++ b/14/04_homework/index.html
@@ -15,7 +15,15 @@
       <div class="city temp"></div>
       <hr />
       <div class="city clouds"></div>
+      <div class="city icon"></div>
       <hr />
+      <div class="city wind">
+        <p>Скорость ветра</p>
+        <p></p>
+        <p></p>
+      </div>
+      <input type="text" name="" id="" />
+      <button>Обновить погоду</button>
     </div>
     <script src="script.js"></script>
   </body>
