added project weather

--- a/14/04_homework/index.html
+++ b/14/04_homework/index.html
@@ -9,22 +9,81 @@
   </head>
 
   <body>
-    <div class="container city-block">
-      <div class="city city-name"></div>
-      <hr />
-      <div class="city temp"></div>
-      <hr />
-      <div class="city clouds"></div>
-      <div class="city icon"></div>
-      <hr />
-      <div class="city wind">
-        <p>Скорость ветра</p>
-        <p></p>
-        <p></p>
+    <div class="windowWraper">
+      <div class="holePage">
+        <div class="container city-block zero">
+          <div class="city city-name"><p></p></div>
+          <hr />
+          <div class="city temp"></div>
+          <hr />
+          <div class="city clouds"></div>
+          <div class="city icon"></div>
+          <hr />
+          <div class="city wind">
+            <p>Швидкість вітру</p>
+            <p class="windSpeed"></p>
+            <p></p>
+          </div>
+        </div>
+        <div class="container city-block first">
+          <div class="city city-name"><p></p></div>
+          <hr />
+          <div class="city temp"></div>
+          <hr />
+          <div class="city clouds"></div>
+          <div class="city icon"></div>
+          <hr />
+          <div class="city wind">
+            <p>Швидкість вітру</p>
+            <p class="windSpeed"></p>
+            <p></p>
+          </div>
+        </div>
+        <div class="container city-block second">
+          <div class="city city-name"><p></p></div>
+          <hr />
+          <div class="city temp"></div>
+          <hr />
+          <div class="city clouds"></div>
+          <div class="city icon"></div>
+          <hr />
+          <div class="city wind">
+            <p>Швидкість вітру</p>
+            <p class="windSpeed"></p>
+            <p></p>
+          </div>
+        </div>
+        <div class="container city-block three">
+          <div class="city city-name"><p></p></div>
+          <hr />
+          <div class="city temp"></div>
+          <hr />
+          <div class="city clouds"></div>
+          <div class="city icon"></div>
+          <hr />
+          <div class="city wind">
+            <p>Швидкість вітру</p>
+            <p class="windSpeed"></p>
+            <p></p>
+          </div>
+        </div>
+        <div class="container city-block four">
+          <div class="city city-name"><p></p></div>
+          <hr />
+          <div class="city temp"></div>
+          <hr />
+          <div class="city clouds"></div>
+          <div class="city icon"></div>
+          <hr />
+          <div class="city wind">
+            <p>Швидкість вітру</p>
+            <p class="windSpeed"></p>
+            <p></p>
+          </div>
+        </div>
       </div>
-      <input type="text" name="" id="" />
-      <button>Обновить погоду</button>
     </div>
+    <button>Оновити погоду</button>
     <script src="script.js"></script>
   </body>
 </html>
