--- a/20/unit_20/unit_20/unit_20.html
+++ b/20/unit_20/unit_20/unit_20.html
@@ -126,6 +126,39 @@
             <p>3. Если вводится следующий символ – повторить удаление active и подсветить клавишу с введенным символом.</p>
             <p>4. Ограничения проекта – тестируются только указанные клавиши в латинской раскладке. Комбинации клавиш не тестируются.
             Т.е. нажиматься shift+A, ctrl+shift – не будут. Все символы вводятся в нижнем регистре.</p>
+            <div class='keyboardLayot'>
+                <div class="keyBlock">0</div>
+                <div class="keyBlock">1</div>
+                <div class="keyBlock">2</div>
+                <div class="keyBlock">3</div>
+                <div class="keyBlock">4</div>
+                <div class="keyBlock">5</div>
+                <div class="keyBlock">6</div>
+                <div class="keyBlock">7</div>
+                <div class="keyBlock">8</div>
+                <div class="keyBlock">9</div>
+            </div>
+            <div class='keyboardLayot'>
+                <div class="keyBlock">q</div>
+                <div class="keyBlock">w</div>
+                <div class="keyBlock">e</div>
+                <div class="keyBlock">r</div>
+                <div class="keyBlock">t</div>
+                <div class="keyBlock">y</div>
+                <div class="keyBlock">u</div>
+                <div class="keyBlock">i</div>
+                <div class="keyBlock">o</div>
+                <div class="keyBlock">p</div>
+            </div>
+            <div class='keyboardLayot'>
+                <div class="keyBlockAd">ShiftLeft</div>
+                <div class="keyBlockAd">ControlLeft</div>
+                <div class="keyBlockAd">AltLeft</div>
+            </div>
+            <div class='keyboardLayot'>
+                <div class="keyBlockAd">Enter</div>
+                <div class="keyBlockAd">Space</div>
+            </div>
 
             <div>
 
