--- a/21/dz_21_blank/dz_21_blank/unit_21.html
+++ b/21/dz_21_blank/dz_21_blank/unit_21.html
@@ -46,7 +46,8 @@
             <p><b>Task 4.</b></p>
             <p>Создайте блок div-4. И кнопку b-4. При нажатии кнопки - добавляйте событие ontouchstart на блок div-4.
                 При событии происходит вывод текста touch в out-4. </p>
-            <div class="div-4 block">4</div>
+            <button class="button-primary b-4">Task-4</button>
+                <div class="div-4 block">4</div>
             <div class="out-4">
             </div>
         </section>
@@ -145,6 +146,7 @@
                 <p class="img-12-text"></p>
                 <button class="button-primary prev">Prev</button>
                 <button class="button-primary next">Next</button>
+                <button class="button-primary reset">Reset</button>
                 <div class="out-11">
                 </div>
         </section>
