--- a/14/04_homework/index.html
+++ b/14/04_homework/index.html
@@ -82,8 +82,10 @@
           </div>
         </div>
       </div>
+      <div class="btns">
+        <button class="changeWeather">Показати погоду в інших містах</button>
+      </div>
     </div>
-    <button>Оновити погоду</button>
     <script src="script.js"></script>
   </body>
 </html>
